[package]
name = "dag-yaml"
version = "0.1.0"
edition = "2021"
description = "Convert YAML to IPFS dag-cbor IPLD nodes via Kubo"
license = "MIT"

[[bin]]
name = "dy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
