[package]
name = "dag-yaml"
version = "0.1.1"
edition = "2021"
description = "Convert YAML to IPFS dag-cbor IPLD nodes via Kubo"
license = "MIT"

[[bin]]
name = "dy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
yaml-rust2 = "0.9"

[profile.release]
lto = true
codegen-units = 1
strip = true
